--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,3 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.parent{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color:  rgb(135, 60, 130);
+}
