agregando comentarios del encabezado

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,3 +8,7 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color:  rgb(135, 60, 130);
 }
+
+/*INICIO DEL ENCABEZADO*/
+
+/*FIN DEL ENCABEZADO*/
