--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,4 +22,15 @@
     flex-wrap: wrap;
 }
 
+header{
+    width: 100%;
+    height: 50px;
+    background: rgb(113, 1, 106);
+    color: #fff;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    z-index: 100;
+}
+
 /*FIN DEL ENCABEZADO*/
