--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -8,5 +8,12 @@ header label{
     cursor: pointer;
 }
 .menu{
-    
+    position: absolute;
+    top: 50px;
+    left: 0%;
+    width: 100%;
+    height: 100vh;
+    background: rgb(113, 1, 106);
+    transition: all 0.5s;
+    transform: translateX(100%);
 }
