--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -16,7 +16,7 @@ header label{
     left: 0%;
     width: 100%;
     height: 100vh;
-    background: rgb(113, 1, 106);
+    background: var(--menu-fondo);
     transition: all 0.5s;
     transform: translateX(100%);
 }
