--- a/CSS/banner.css
+++ b/CSS/banner.css
@@ -10,5 +10,9 @@
     width: 100%;
 }
 #banner .container{
-    
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    color: var(--color-fondo);
 }
