dandole estilo a enlaces

--- a/CSS/banner.css
+++ b/CSS/banner.css
@@ -20,5 +20,11 @@
     font-size: 28px;
 }
 #banner a{
-    
+    display: block;
+    width: 100px;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px;
+    margin-top: 10px;
+    border: 3px solid #fff;
 }
