iniciando el cuerpo de pagina

--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -29,7 +29,7 @@ header label{
     border-bottom: 1px solid rgba(255,255,255,0,5);
 }
 .menu a:hover{
-    backgound: rgba(255,255,255,0.1);
+    background: rgba(255,255,255,0.1);
 }
 #menu_barra:checked  ~ .menu{
     transform: translateX(65%);
