--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,6 +48,10 @@ header .container{
 
 /*FIN DEL ENCABEZADO*/
 
+/* INICIO CUERPO DE PAGINA*/
+
+/* FIN CUERPO DE PAGINA*/
+
 /*INICIO DEL PIE DE PAGINA*/
 
 /*FIN DEL PIE DE PAGINA*/
