dandole estilo al body

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,7 +49,9 @@ header .container{
 /*FIN DEL ENCABEZADO*/
 
 /* INICIO CUERPO DE PAGINA*/
-
+    body{
+        
+    }
 /* FIN CUERPO DE PAGINA*/
 
 /*INICIO DEL PIE DE PAGINA*/
