--- a/CSS/style.css
+++ b/CSS/style.css
@@ -50,7 +50,7 @@ header .container{
 
 /* INICIO CUERPO DE PAGINA*/
     body{
-        
+        height: 100vh;
     }
 /* FIN CUERPO DE PAGINA*/
 
