--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,58 +2,150 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
+/********************************/
+/***********ENCABEZADO***********/
+/********************************/
 
-.parent{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-/*INICIO DEL ENCABEZADO*/
-
-.input{
-    position: absolute;
-    text-align: center;
-    height: 0%;
-    width: 75%;
-    margin-top: -35px;
-    padding-top: 5px;
-    margin-left: 50px;
-    flex-wrap: wrap;
-}
-
-header{
+nav{
+    background: #7fe8ff;
+    height: 80px;
     width: 100%;
-    height: 50px;
-    background: rgb(113, 1, 106);
-    color: #fff;
-    position: fixed;
-    top: 0%;
-    left: 0%;
-    z-index: 100;
 }
-
-.container{
-    width: 98%;
-    margin: auto;
-}
-
 h1{
-    float: left;
+    position: absolute;
+    padding: 20px 70px;
+}
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+nav ul li{
+    display: inline-block;
+    line-height: 75px;
+    text-transform: uppercase;
+}
+nav ul li a{
+    color: rgb(255, 255, 255);
+    border-radius: 4px;
+    padding: 7px 13px;
+    font-size: 18px;
+    margin: 15px;
+}
+li a:active, li a:hover{
+    background-color: rgb(38, 24, 231);
+    transition: .3s;
+}
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 75px;
+    margin-right: 30px;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display: none;
+}
+/********************************/
+/***********ENCABEZADO***********/
+/********************************/
+/********************************/
+/*************CUERPO*************/
+/********************************/
+slide-container{
+    max-width: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #8b92b5c2;
+}
+.slide-content{
+    margin: 0 29px;
+}
+.card{
+    width: 320px;
+    border-radius: 25px;
+    background-color: #fff;
+}
+.image-content, .card-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 14px;
+}
+.image-content{
+    position: relative;
+    row-gap: 5px;
+    padding: 25px 0;
+}
+.overlay{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--color-obscuro);
+    border-radius: 25px 25px 0 25px;
+}
+.overlay::before, .overlay::after{
+    content: '';
+    right: 0;
+    bottom: -40px;
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background-color: var(--color-obscuro);
+}
+.overlay::after{
+    border-radius: 0 25px 0 0;
+    background-color: #fff;
+}
+.card-image{
+    position: relative;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    background: #fff;
+    padding: 3px;
+}
+.card-image .card-img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 4px solid var(--color-obscuro);
+}
+.name{
+    font-size: 18px;
+    font-weight: 500;
+    color: #333;
+}
+.description{
+    font-size: 14px;
+    color: #707070;
+    align-items: center;
+}
+.button{
+    border: none;
+    font-size: 16;
+    color: #fff;
+    padding: 8px 16px;
+    background-color: var(--color-obscuro);
+    border-radius: 6px;
+    margin: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.button:hover{
+    background: var(--color-social);
 }
 
-header .container{
-    display: table;
-}
-
-/*FIN DEL ENCABEZADO*/
-
-/* INICIO CUERPO DE PAGINA*/
-    body{
-        height: 100vh;
-        background-color: #020e26;
-    }
-/* FIN CUERPO DE PAGINA*/
-
-/*INICIO DEL PIE DE PAGINA*/
-
-/*FIN DEL PIE DE PAGINA*/
+/********************************/
+/*************CUERPO*************/
+/********************************/
+/********************************/
+/**********PIE DE PAGINA*********/
+/********************************/
